# Il-Gusto-Giusto

./: .gitignore  README.md  a.cpp  app.py  conftest.py  idea.md  main.py  pyproject.toml  report.md  requirements.txt
.streamlit/: config.toml
data/: default_config.json  restaurant_state.json
src/: engine.py  models.py  persistence.py
src/components/: dashboard.py  finance.py  menu_admin.py  order_form.py  settings.py  staff_admin.py  supply_store.py
src/core/: constraints.py  scheduler.py
src/models/: events.py  restaurant.py
src/persistence/: json_handler.py  repository.py
src/services/: restaurant_service.py
src/ui/: styles.py
tests/: test_scheduler.py
