[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "il-gusto-giusto"
version = "1.0.0"
description = "Sistema de gestión de restaurante italiano"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "pytest"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]